--- a/src/app/main/content/projects/projects.component.html
+++ b/src/app/main/content/projects/projects.component.html
@@ -1,5 +1,5 @@
 <!-- Projects -->
-<div id="projects" class="mat-primary-400-bg" fxLayout="column1" fxLayoutAlign="start center" fxFlex fusePerfectScrollbar>
+<div id="projects" class="mat-primary-400-bg" fxLayout="column" fxLayoutAlign="start center" fxFlex fusePerfectScrollbar>
   <div class="header pt-44 pt-mat-88" fxFlex="0 0 auto" *fuseIfOnDom [@animate]="{value: '*', params: {delay: '100ms'}}">
     <h1>Projects</h1>
   </div>
@@ -14,7 +14,7 @@
       <!--/project-->
 
       <!-- NEW PROJECT BUTTON -->
-      <div class="projects-list-item add-new-project" fxLayout="column" fxLayoutAlign="center center"
+      <div class="project-list-item add-new-project" fxLayout="column" fxLayoutAlign="center center"
            (click)="newProject()"
            [@animate]="{value:'*',params:{y:'100%'}}">
           <mat-icon class="s-64">add_circle</mat-icon>
